page ua-1 - ready

--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Шахмати «Дерев яні» - Купити з Доставкою (800+ Замовлень)</title>
+    <title>
+      Шахмати Купити Дерев'яні (грати на двох) з доставкою – Shahmati ТУТ! 🚚
+      Найкраща якість та стиль у кожній фігурці. Замовте зараз! (800+ замовлень)
+    </title>
     <meta
       name="description"
-      content="Придбайте Шахмати - дерев яні (або подарункові) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
+      content="Придбайте Шахмати - Дерев яні (2 гравця) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
     />
     <meta
       name="keywords"
-      content="Шахмати грати , шахмати купити, купити шахмати, правила гри, грати в шахмати, шахмати правила, правила гри в шахмати, як грати в шахмати , шахмати в Україні, купити шахмати дерев яні, ціна, онлайн замовлення."
+      content="купити шахмати дерев яні, шахмати дерев яні купити, шахмати купити, купити шахмати подарункові, шахмати купити львів, шахмати купити івано франківськ, купити шахмати, купити шахмати у львові, шахмати купити україна, шахмати правила, як грати в шахмати, як ходять шахмати, шахмати як грати , як виграти в шахмати"
     />
     <meta property="og:title" content="Шахмати Купити" />
     <meta
       property="og:description"
-      content="Придбайте Шахмати - дерев яні (або подарункові) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
+      content="Придбайте Шахмати - дерев яні (грати на двох) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахмати ТУТ" />
-    <meta property="og:url" content="https://monopolytut.com/" />
+    <meta property="og:url" content="https://shahmatytut.com/" />
     <meta
       property="og:image"
-      content="https://shahmatytut.com/image/shahmati_sketch.webp"
+      content="https://shahmatytut.com/image/shahmaty_ua.webp"
     />
     <meta http-equiv="content-language" content="uk-UA" />
     <meta name="robots" content="index, follow" />
@@ -33,9 +36,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "Шахмати Дерев яні Подарункові",
-        "image": "/image/shahmati_sketch.webp",
-        "description": "гра для початківців та всіх, хто хоче відчути себе розумним та справжнім стратегом",
+        "name": "Шахмати купити",
+        "image": "/image/shahmaty_ua.webp",
+        "description": "Шахмати Дерев'яні - ідеальна гра для початківців та всіх, хто хоче купити шахмати та відчути себе розумним та справжнім стратегом. Замовте зараз за вигідною ціною!",
         "brand": {
           "@type": "Thing",
           "name": "Shahmati"
@@ -68,14 +71,14 @@
           <a href="#promo" class="nav__item" itemprop="url">КУПИТИ</a>
           <a href="#about" class="nav__item" itemprop="url">ДЕРЕВ ЯНІ</a>
           <a href="#photo" class="nav__item" itemprop="url">ФОТО</a>
-          <a href="#question" class="nav__item" itemprop="url">???</a>
+          <a href="#question" class="nav__item" itemprop="url">ПРАВИЛА ГРИ</a>
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <span class="lang__item">Шахмати Дерев яні</span> |
-          <a href="shahi.html" class="lang__item">Шахи Дерев яні</a>
+          <span class="lang__item">Шахмати (30х30) (38х38)</span> |
+          <a href="shahi.html" class="lang__item">Шахи (52х52)</a>
           |
-          <a href="ruchnoyi-roboti.html" class="lang__item">Ручної Роботи</a>
+          <a href="ru.html" class="lang__item">Шахматы 3в1</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -86,7 +89,7 @@
       <section id="promo" itemscope itemtype="http://schema.org/Product">
         <h1 class="promo__title" itemprop="name">ШАХМАТИ КУПИТИ</h1>
         <img
-          src="image/shahmati_sketch.webp"
+          src="image/shahmaty_ua.webp"
           class="promo__img"
           width="550"
           height="350"
@@ -94,8 +97,8 @@
           alt="шахмати гра"
         />
         <div class="promo_description" itemprop="description">
-          Купуйте шахмати вже сьогодні та зробіть ваші вечори неймовірно
-          насиченими та цікавими!
+          Замовте свої шахмати прямо зараз та вже завтра робіть свої вечори
+          неймовірно цікавими та виграшними!
         </div>
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
           <meta itemprop="priceCurrency" content="UAH" />
@@ -114,7 +117,7 @@
             loading="lazy"
             alt="показати"
           />
-          <p>занурся в світ шахмат, де кожен хід – це твій крок до перемоги!</p>
+          <p>Шахмати це – це твій крок до перемоги!</p>
         </div>
         <div class="promo__air air__right">
           <img
@@ -124,7 +127,7 @@
             loading="lazy"
             alt="показати"
           />
-          <p>тут можеш обрати «Дерев яні» або «ручної роботи»</p>
+          <p>тут можеш обрати розмір «Шахи (52х52)» або «Шахматы 3в1»</p>
         </div>
       </section>
       <section id="about" itemscope itemtype="http://schema.org/Thing">
@@ -133,15 +136,16 @@
           <div class="about__content">
             <h3>Ціна</h3>
             <p>
-              Шахмати коштують 900 грн. Інші продають колекційні по космічним
-              цінам. У нас шахмати для гри, ми беремо кількістю, тому і маємо
-              800+ Замовлень!
+              Шахмати коштують 900 грн. У нас ви знайдете шахмати для гри, і ми
+              враховуємо кожне ваше замовлення, що підтверджено 800+
+              задоволеними клієнтами!
             </p>
+
             <h3>Україна</h3>
-            <p itemprop="description">
-              Шахмати для початківців, дітей та дорослих. Дерев яні шахмати, є
-              класичними які гарно підходять всім. Ми маємо 800+ продажів в Укр
-              саме цих подарункових шахматів!
+            <p>
+              Якщо ви шукаєте можливість «шахмати грати на двох» – замовляйте
+              вже зараз. Доставка по всій Україні. Насолоджуйтесь грою та
+              створюйте власні стратегії!
             </p>
           </div>
           <img
@@ -155,20 +159,20 @@
           />
           <div class="about__air">
             <img
-              src="image/select.webp"
+              src="image/two-chess-figure.webp"
               class="air__money"
-              width="69"
+              width="80"
               height="100"
               loading="lazy"
-              alt="лист з ручкою"
+              alt="дві фігури"
             />
             <img
-              src="image/king-figure.webp"
+              src="image/select.webp"
               class="air__bag"
-              width="50"
-              height="120"
+              width="90"
+              height="100"
               loading="lazy"
-              alt="Шахматна фігура король"
+              alt="шаховий словник"
             />
             <img
               src="image/gift.webp"
@@ -176,7 +180,7 @@
               width="50"
               height="130"
               loading="lazy"
-              alt="Інцтрмент для виробу"
+              alt="інцтрмент"
             />
           </div>
         </div>
@@ -218,7 +222,7 @@
                 loading="lazy"
                 alt="вигляд збоку"
               />
-              <meta itemprop="name" content="монополія подарунок" />
+              <meta itemprop="name" content="шахмати" />
             </li>
             <li
               class="photo__item"
@@ -246,8 +250,10 @@
             />
           </div>
           <div class="photo__content">
-            <h3>В Упаковці:</h3>
+            <h3>В Наявності:</h3>
             <ul>
+              <li>- 30х30мм Розмір шахматної дошки</li>
+              <li>- 38х38мм Розмір шахматної дошки</li>
               <li>– Фігури великі з дерева горіха</li>
               <li>– Планки зі смереки</li>
               <li>– Малюнок на березовому шпоні</li>
@@ -257,14 +263,13 @@
               <li>- 4 тури</li>
               <li>- 2 король</li>
               <li>- 2 ферзь</li>
-              <li>- 52х52мм Розмір шахматної дошки</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
         </div>
       </section>
       <section id="question" itemscope itemtype="http://schema.org/FAQPage">
-        <h2 class="question__title">дерев’яні</h2>
+        <h2 class="question__title">ШАХМАТИ ПРАВИЛА</h2>
         <dl class="question__list">
           <div
             class="question__item"
@@ -272,24 +277,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Пласткові гірші?</dt>
+            <dt itemprop="name">шахмати розстановка</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Пластикові шахи менш якісні та швидше зношуються, у порівнянні з
-                дерев'яними. Вибір на користь "шахмати дерев яні" гарантує
-                тривалий комфорт та вигляд.
+                Розстановка фігур: король в центрі, королева поруч, слони поруч
+                з королями, коні біля слонів, та ферзі на кольорі. Легко
+                запам'ятовується абревіатурою "КССФК".
               </span>
             </dd>
             <img
-              src="image/chess_stop.png"
-              width="76"
+              src="image/chess-order.webp"
+              width="90"
               height="80"
               loading="lazy"
-              alt="пластикова фігура"
+              alt="дошка з шахматами"
             />
           </div>
           <div
@@ -298,24 +303,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Дерев яні краще?</dt>
+            <dt itemprop="name">шахмати як грати</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Дерев яні шахмати – ідеальний вибір для дітей, а також для
-                подарунку близьким та друзям. Естетика, екологічність та висока
-                якість гарантують гарні відчуття від гри!
+                Ознайомтесь з правилами та базовими стратегіями, щоб ркаще
+                розуміти як грати шахмати. Для того, щоб грати на двох, почніть
+                з розстановки фігур на дошці за стандартними правилами.
               </span>
             </dd>
             <img
-              src="image/chess_love.png"
-              width="76"
+              src="image/cheess-order-figure.webp"
+              width="90"
               height="80"
               loading="lazy"
-              alt="деревʼяна фігура"
+              alt="дошка з фігурами"
             />
           </div>
           <div
@@ -324,24 +329,25 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Хто обирав їх?</dt>
+            <dt itemprop="name">як ходять шахмати</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Легендарні гросмейстери, такі як Ро́берт Джеймс «Бо́ббі» Фі́шер,
-                обрали дерев'яні шахи за їх тепло та естетику. Це завжди був
-                вибір майстрів гри."
+                Шахмати — це настільна стратегічна гра для двох гравців, кожен
+                має 16 шашок. Гравці рухають свої шашки по дошці з метою взяти в
+                плен короля. Гра завершується, коли один із гравців матує
+                супротивника.
               </span>
             </dd>
             <img
-              src="image/player.png"
-              width="76"
+              src="image/move-figure.webp"
+              width="86"
               height="80"
               loading="lazy"
-              alt="гравець"
+              alt="ход фігури"
             />
           </div>
           <div
@@ -350,23 +356,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Чому звали «Боббі»?</dt>
+            <dt itemprop="name">як ходе тура</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Ім'я Боббі – це просте скорочення від Роберт, що відзначало його
-                як гравця з особистим стилем та виразністю у світі шахів.
+                Тура рухається по горизонталі чи вертикалі на будь-яку клітинку,
+                без обмеження відстані, але не може рухатися по діагоналі чи
+                перескакувати інші фігури.
               </span>
             </dd>
             <img
-              src="image/fact.png"
-              width="73"
+              src="image/tour-figure.webp"
+              width="45"
               height="80"
               loading="lazy"
-              alt="загадка"
+              alt="фігура тура"
             />
           </div>
           <div
@@ -375,24 +382,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Які приємніші?</dt>
+            <dt itemprop="name">як ходе король в шахматах</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Дерев'яні шахмати краще переміщати по дошці через їхню природну
-                текстуру та вагу, що додає відчуття стабільності та задоволення
-                від гри.
+                Король - на одну клітину; Слон - по діагоналі; Королева -
+                комбінація слона та тура; Конь - "Л"; Пішак - 1 або 2 клітини
+                вперед; Стратегія та передбачення ключові для гри.
               </span>
             </dd>
             <img
-              src="image/feel.png"
-              width="92"
+              src="image/king-figure-2.webp"
+              width="45"
               height="80"
               loading="lazy"
-              alt="дотик"
+              alt="фігура король"
             />
           </div>
           <div
@@ -401,23 +408,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Дерев яні тихіші?</dt>
+            <dt itemprop="name">як виграти в шахмати</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Дерев'яні шахи мають природну абсорбцію звуків, що робить гру
-                тихішою і додає специфічний атмосферний шар до ігрового процесу.
+                Контролюйте центр, захищайте короля, вивчайте відкриття,
+                плануйте кінцівку та прогнозуйте ходи супротивника. Розвивайте
+                фігури та вивчайте варіанти.
               </span>
             </dd>
             <img
-              src="image/loud.png"
-              width="75"
-              height="80"
+              src="image/pawn-figure-fell.webp"
+              width="110"
+              height="50"
               loading="lazy"
-              alt="гучно"
+              alt="пішак"
             />
           </div>
         </dl>
@@ -502,10 +510,43 @@
           <p>ми тебе не змушуємо, бо ти сам цього хочеш (:</p>
         </div>
       </section>
+      <section id="outreach">
+        <h2 class="outreach__title">ТАКОЖ КУПУЮТЬ</h2>
+        <div class="outreach__list">
+          <a
+            href="https://monopolytut.com/harry-potter"
+            rel="dofollow"
+            class="outreach__item"
+          >
+            <img
+              src="image/monopolytut_com.webp"
+              width="164"
+              height="200"
+              loading="lazy"
+              alt="монополія"
+            />
+            <span class="outreach__name">МОНОПОЛІЯ</span>
+          </a>
+          <a
+            href="https://elkatut.com/180sm"
+            rel="dofollow"
+            class="outreach__item"
+          >
+            <img
+              src="image/elkatut_com.webp"
+              width="140"
+              height="200"
+              loading="lazy"
+              alt="ялинка штучна"
+            />
+            <span class="outreach__name">ЯЛИНКА ШТУЧНА</span>
+          </a>
+        </div>
+      </section>
     </main>
     <div id="modal">
       <div class="modal__content">
-        <h2 class="modal__title">Замовити Монополію</h2>
+        <h2 class="modal__title">Замовити Шахмати</h2>
         <div class="wrap modal__box">
           <div class="modal__choice">
             <strong>Оплата:</strong>
@@ -578,12 +619,8 @@
                 placeholder="Відділеня НП або УП"
                 required
               />
-              <input
-                type="hidden"
-                name="title"
-                value="Монополія (банк без меж)"
-              />
-              <input type="hidden" name="price" id="price" value="590" />
+              <input type="hidden" name="title" value="Шахмати (укр)" />
+              <input type="hidden" name="price" id="price" value="900" />
               <input type="hidden" name="payment" id="payment" value="cash" />
               <input type="hidden" name="service" id="service" value="nova" />
               <input type="submit" value="Готово" />
@@ -626,7 +663,7 @@
       gtag('js', new Date());
       gtag('config', 'G-5ESJX0ZSVE');
     </script>
-    <!-- Hotjar Tracking Code for https://monopolytut.com/ -->
+    <!-- Hotjar Tracking Code for https://shahmatytut.com/ -->
     <script>
       (function (h, o, t, j, a, r) {
         h.hj =
