--- a/ru.html
+++ b/ru.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://shahmatytut.com/" />
     <meta
       property="og:image"
-      content="https://shahmatytut.com/image/shahmati_sketch.webp"
+      content="https://shahmatytut.com/image/shahmaty_ru.webp"
     />
     <meta http-equiv="content-language" content="ru_RU" />
     <meta name="robots" content="index, follow" />
@@ -34,7 +34,7 @@
         "@context": "https://schema.org",
         "@type": "Product",
         "name": "Шахматы Деревянные",
-        "image": "/image/shahmati_sketch.webp",
+        "image": "/image/shahmaty_ru.webp",
         "description": "Шахматы - покупайте и наслаждайтесь игрой, подходят для всех, от новичков до тех, кто стремится стать лучшим стратегом.",
         "brand": {
           "@type": "Thing",
@@ -74,10 +74,11 @@
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <span class="lang__item">Шахматы Классические</span> |
-          <a href="index.html" class="lang__item">Шахматы (32x32см)</a>
+          <a href="index.html" class="lang__item">Шахмати (30х30) (38х38)</a>
           |
-          <a href="shahi.html" class="lang__item">Шахматы (52х52см)</a>
+          <a href="shahi.html" class="lang__item">Шахи (52х52см)</a>
+          |
+          <span class="lang__item">Шахматы 3в1</span>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -88,7 +89,7 @@
       <section id="promo" itemscope itemtype="http://schema.org/Product">
         <h1 class="promo__title" itemprop="name">ШАХМАТЫ КУПИТЬ</h1>
         <img
-          src="image/shahmati_sketch.webp"
+          src="image/shahmaty_ru.webp"
           class="promo__img"
           width="450"
           height="350"
@@ -126,7 +127,10 @@
             loading="lazy"
             alt="показать"
           />
-          <p>тут можеш выбрать «шахматы 32x32см» или «шахмати классические»</p>
+          <p>
+            здесь можеш выбрать размер: «Шахматы (30х30) (38х38)» или «Шахматы
+            (52х52см)»
+          </p>
         </div>
       </section>
       <section id="about" itemscope itemtype="http://schema.org/Thing">
