--- a/shahi.html
+++ b/shahi.html
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://monopolytut.com/" />
     <meta
       property="og:image"
-      content="https://shahmatytut.com/image/shahmati_sketch.webp"
+      content="https://shahmatytut.com/image/shahy_ua.webp"
     />
     <meta http-equiv="content-language" content="uk-UA" />
     <meta name="robots" content="index, follow" />
@@ -36,7 +36,7 @@
         "@context": "https://schema.org",
         "@type": "Product",
         "name": "шахи Дерев яні Подарункові",
-        "image": "/image/shahmati_sketch.webp",
+        "image": "/image/shahy_ua.webp",
         "description": "гра для початківців та всіх, хто хоче відчути себе розумним та справжнім стратегом",
         "brand": {
           "@type": "Thing",
@@ -74,10 +74,11 @@
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <span class="lang__item">Шахи Деревʼяні</span> |
-          <a href="index.html" class="lang__item">Шахмати Деревʼяні </a>
+          <a href="index.html" class="lang__item">Шахмати (30х30) (38х38)</a>
           |
-          <a href="ruchnoyi-roboti.html" class="lang__item">Ручної Роботи</a>
+          <span class="lang__item">Шахи (52х52)</span>
+          |
+          <a href="ru.html" class="lang__item">Шахматы 3в1</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -88,7 +89,7 @@
       <section id="promo" itemscope itemtype="http://schema.org/Product">
         <h1 class="promo__title" itemprop="name">ШАХИ КУПИТИ</h1>
         <img
-          src="image/shahmati_sketch.webp"
+          src="image/shahy_ua.webp"
           class="promo__img"
           width="450"
           height="350"
@@ -126,7 +127,7 @@
             loading="lazy"
             alt="показати"
           />
-          <p>тут можеш обрати «деревʼяні» або «ручної роботи»</p>
+          <p>тут можеш обрати розмір: «Шахи (30х30) (38х38)» або «Шахи 3в1»</p>
         </div>
       </section>
       <section id="about" itemscope itemtype="http://schema.org/Thing">
