Shahi page is ready.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>
-      Шахмати Купити Дерев'яні (грати на двох) з доставкою – Shahmati ТУТ! 🚚
+      Шахмати Купити Дерев яні (грати на двох) з доставкою – Shahmati ТУТ! 🚚
       Найкраща якість та стиль у кожній фігурці. Замовте зараз! (800+ замовлень)
     </title>
     <meta
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="купити шахмати дерев яні, шахмати дерев яні купити, шахмати купити, купити шахмати подарункові, шахмати купити львів, шахмати купити івано франківськ, купити шахмати, купити шахмати у львові, шахмати купити україна, шахмати правила, як грати в шахмати, як ходять шахмати, шахмати як грати , як виграти в шахмати"
+      content="купити шахмати дерев яні, шахмати дерев яні купити, шахмати купити, купити шахмати подарункові, шахмати купити львів, шахмати купити івано франківськ, купити шахмати, купити шахмати у львові, шахмати купити україна, шахмати правила, як грати в шахмати, як ходять шахмати, шахмати як грати , як виграти в шахмати,  ціна, онлайн замовлення"
     />
     <meta property="og:title" content="Шахмати Купити" />
     <meta
@@ -91,13 +91,13 @@
         <img
           src="image/shahmaty_ua.webp"
           class="promo__img"
-          width="550"
+          width="450"
           height="350"
           itemprop="image"
           alt="шахмати гра"
         />
         <div class="promo_description" itemprop="description">
-          Замовте свої шахмати прямо зараз та вже завтра робіть свої вечори
+          Замовте шахмати прямо зараз та вже завтра робіть свої вечори
           неймовірно цікавими та виграшними!
         </div>
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
