--- a/ru.html
+++ b/ru.html
@@ -19,7 +19,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахматы ТУТ" />
-    <meta property="og:url" content="https://shahmatytut.com/" />
+    <meta property="og:url" content="https://shahmatytut.com/ru" />
     <meta
       property="og:image"
       content="https://shahmatytut.com/image/shahmaty_ru.webp"
