--- a/shahi.html
+++ b/shahi.html
@@ -4,24 +4,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>
-      Шахи «Подарункові Дерев яні» - Купити з Доставкою (800+ Замовлень)
+      Шахи Купити Дерев'яні (гра для всіх) – Шахи ТУТ! 🚚 Швидка доставка (1-2
+      дні). Замовте зараз! (800+ замовлень)
     </title>
+
     <meta
       name="description"
-      content="Придбайте шахи - на подарунок (2 гравці) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте шахи в подарунок (800+ замовлень)!"
+      content="Купуйте Шахи – Дерев яні (гра для всіх) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте. Понад 800 задоволених клієнтів!"
     />
     <meta
       name="keywords"
-      content="Грати в шахи, купити шахи, настільна гра, правила гри, які обрати, доставка шахмат, настільні ігри, сімейні гри, шахи в Україні, подарунок, ціна, онлайн замовлення."
+      content="Шахи купити, шахи дерев'яні купити, купити шахи дерев'яні, купити шахи Україна, шахи купити Київ, шахи купити Львів, грати в шахи, доставка, ціна, онлайн замовлення, гра в шахи, шахи для всіх, гра в шахи для початківців, шахи для дітей, гра у шахи, шахи шашки нарди, правила гри в шахи для дітей, шахи для початківців"
     />
-    <meta property="og:title" content="шахи Купити" />
+    <meta property="og:title" content="Шахи Купити" />
     <meta
       property="og:description"
-      content="Придбайте шахи - на подарунок (2 гравці) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте шахи в подарунок (800+ замовлень)!"
+      content="Придбайте шахи - (гра для всіх) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте шахи. (800+ замовлень)!"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="шахи ТУТ" />
-    <meta property="og:url" content="https://monopolytut.com/" />
+    <meta property="og:site_name" content="Шахи ТУТ" />
+    <meta property="og:url" content="https://shahmatytut.com/shahi" />
     <meta
       property="og:image"
       content="https://shahmatytut.com/image/shahy_ua.webp"
@@ -35,9 +37,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "шахи Дерев яні Подарункові",
+        "name": "Шахи Дерев яні",
         "image": "/image/shahy_ua.webp",
-        "description": "гра для початківців та всіх, хто хоче відчути себе розумним та справжнім стратегом",
+        "description": "Гра для тих, хто тільки починає вивчати шахи або шахи для всіх, хто бажає насолоджуватися відчуттям розуму та стратегічного мислення.",
         "brand": {
           "@type": "Thing",
           "name": "Shahmati"
@@ -50,7 +52,7 @@
           "availability": "https://schema.org/InStock",
           "seller": {
             "@type": "Organization",
-            "name": "МОНОПОЛІЯ ТУТ"
+            "name": "Шахи ТУТ"
           }
         }
       }
@@ -68,9 +70,9 @@
           itemtype="http://schema.org/SiteNavigationElement"
         >
           <a href="#promo" class="nav__item" itemprop="url">КУПИТИ</a>
-          <a href="#about" class="nav__item" itemprop="url">ПОДАРУНКОВІ</a>
+          <a href="#about" class="nav__item" itemprop="url">ДЕРЕВ ЯНІ</a>
           <a href="#photo" class="nav__item" itemprop="url">ФОТО</a>
-          <a href="#question" class="nav__item" itemprop="url">ДЕРЕВʼЯНІ</a>
+          <a href="#question" class="nav__item" itemprop="url">ПРО ШАХИ</a>
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
@@ -117,7 +119,7 @@
             loading="lazy"
             alt="показати"
           />
-          <p>занурся в світ шахмат, де кожен хід – це твій крок до перемоги!</p>
+          <p>кожен хід призводить тебе ближче до власного триумфу!</p>
         </div>
         <div class="promo__air air__right">
           <img
@@ -131,55 +133,55 @@
         </div>
       </section>
       <section id="about" itemscope itemtype="http://schema.org/Thing">
-        <h2 class="about__title" itemprop="name">ПОДАРУНКОВІ</h2>
+        <h2 class="about__title" itemprop="name">ДЕРЕВ ЯНІ</h2>
         <div class="wrap about__box">
           <div class="about__content">
-            <h3>Кому подарувати?</h3>
-            <p itemprop="description">
-              Обирайте шахи для початківців, дітей та дорослих. Дерев яні шахи
-              гарно подіходять для подарунку. Ми маємо 800+ продажів саме цих
-              шахматів на подарунок!
-            </p>
             <h3>Ціна</h3>
             <p>
-              Шахи коштують 900 грн. Інші продають колекційні по космічним
-              цінам. У нас шахи для гри, ми беремо кількістю, тому і маємо 800+
-              Замовлень!
+              Шахи коштують 900 грн. У інших ви можете знайти колекційні вироби.
+              У нас шахи шашки нарди для гри, ми беремо кількістю, тому маємо
+              800+ Замовлень!
+            </p>
+            <h3>Україна</h3>
+            <p itemprop="description">
+              Шахи для початківців, шахи для дітей, шахи для всіх, тому
+              замовляйте та отримуйте в будь-якому місці України! Та вже скоро
+              ви зможете грати шахи.
             </p>
           </div>
           <img
-            src="image/2chess_gift.jpg"
+            src="image/chess_gift.png"
             class="about__img"
             width="330"
             height="300"
             loading="lazy"
             itemprop="image"
-            alt="шахи подарункові"
+            alt="шахові фігури "
           />
           <div class="about__air">
             <img
-              src="image/money.png"
+              src="image/two-chess-figure.webp"
               class="air__money"
-              width="120"
+              width="80"
               height="100"
               loading="lazy"
-              alt="гроші"
+              alt="дві шахові фігури"
             />
             <img
-              src="image/thinking.png"
+              src="image/select.webp"
               class="air__bag"
-              width="120"
-              height="120"
+              width="90"
+              height="100"
               loading="lazy"
-              alt="думаючий"
+              alt="шаховий словник"
             />
             <img
-              src="image/gift.png"
+              src="image/gift.webp"
               class="air__hat"
-              width="120"
+              width="50"
               height="130"
               loading="lazy"
-              alt="подарункова коробка"
+              alt="інцтрмент"
             />
           </div>
         </div>
@@ -267,7 +269,7 @@
         </div>
       </section>
       <section id="question" itemscope itemtype="http://schema.org/FAQPage">
-        <h2 class="question__title">дерев’яні</h2>
+        <h2 class="question__title">НАЗВИ ФІГУР В ШАХАХ</h2>
         <dl class="question__list">
           <div
             class="question__item"
@@ -275,24 +277,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Пласткові гірші?</dt>
+            <dt itemprop="name">що таке шахи</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Пластикові шахи менш якісні та швидше зношуються, у порівнянні з
-                дерев'яними. Вибір на користь "шахи дерев яні" гарантує тривалий
-                комфорт та вигляд.
+                Шахи - настільна гра для двох осіб на дошці 8x8. Мета - матувати
+                супротивника, захопивши його короля. Кожна фігура рухається
+                певним чином. Гра розвиває стратегічне та тактичне мислення.
               </span>
             </dd>
             <img
-              src="image/chess_stop.png"
-              width="76"
+              src="image/chess-order.webp"
+              width="90"
               height="80"
               loading="lazy"
-              alt="пластикова фігура"
+              alt="дошка з шахматами"
             />
           </div>
           <div
@@ -301,24 +303,25 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Деревʼяні краще?</dt>
+            <dt itemprop="name">шахи фігури</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Дерев яні шахи – ідеальний вибір для дітей, а також для
-                подарунку близьким та друзям. Естетика, екологічність та висока
-                якість гарантують гарні відчуття від гри!
+                Король - Головна фігура. Ферзь - Найсильніший, ходить по
+                діагоналі та прямій. Слон - Ходить по діагоналі. Конь - Робить
+                "буксирські" ходи. Тура - Рухається по прямій. Пішак - Ходить
+                вперед, б'ючи по діагоналі.
               </span>
             </dd>
             <img
-              src="image/chess_love.png"
-              width="76"
+              src="image/cheess-order-figure.webp"
+              width="90"
               height="80"
               loading="lazy"
-              alt="деревʼяна фігура"
+              alt="дошка з фігурами"
             />
           </div>
           <div
@@ -327,24 +330,25 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Хто обирав їх?</dt>
+            <dt itemprop="name">шахи як грати</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Легендарні гросмейстери, такі як Ро́берт Джеймс «Бо́ббі» Фі́шер,
-                обрали дерев'яні шахи за їх тепло та естетику. Це завжди був
-                вибір майстрів гри."
+                Розставте фігури, рухайте їх за правилами, матуйте короля
+                супротивника. Гравці чергуються робити ходи. Використовуйте
+                спеціальний хід - рокіровку. Перемагає той, хто матує
+                противника.
               </span>
             </dd>
             <img
-              src="image/player.png"
-              width="76"
+              src="image/move-figure.webp"
+              width="86"
               height="80"
               loading="lazy"
-              alt="гравець"
+              alt="ход фігури"
             />
           </div>
           <div
@@ -353,23 +357,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Чому звали «Боббі»?</dt>
+            <dt itemprop="name">цікаві факти про шахи</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Ім'я Боббі – це просте скорочення від Роберт, що відзначало його
-                як гравця з особистим стилем та виразністю у світі шахів.
+                Шахи виникли в Індії 6 століть тому. Сергій Карякін став
+                гросмейстером у 12 років. Найдорожчий золотий набір шахів
+                коштував 9,8 млн доларів.
               </span>
             </dd>
             <img
-              src="image/fact.png"
-              width="73"
+              src="image/tour-figure.webp"
+              width="45"
               height="80"
               loading="lazy"
-              alt="загадка"
+              alt="фігура тура"
             />
           </div>
           <div
@@ -378,24 +383,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Які приємніші?</dt>
+            <dt itemprop="name">правила гри в шахи для дітей</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Дерев'яні шахи краще переміщати по дошці через їхню природну
-                текстуру та вагу, що додає відчуття стабільності та задоволення
-                від гри.
+                Шахи для дітей: Розставити фігури. Пішак вперед, інші за
+                правилами. Мета - взяти короля суперника, уникати "мата".
+                Розвиває логіку та стратегію.
               </span>
             </dd>
             <img
-              src="image/feel.png"
-              width="92"
+              src="image/king-figure-2.webp"
+              width="45"
               height="80"
               loading="lazy"
-              alt="дотик"
+              alt="фігура король"
             />
           </div>
           <div
@@ -404,23 +409,25 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Деревʼяні тихіші?</dt>
+            <dt itemprop="name">гра у шахи</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Дерев'яні шахи мають природну абсорбцію звуків, що робить гру
-                тихішою і додає специфічний атмосферний шар до ігрового процесу.
+                Гра у шахи сприяє розвитку розумових здібностей, таких як
+                стратегічне мислення, планування та аналіз ситуацій. Вона також
+                вимагає великої концентрації та вміння передбачати ходи
+                суперника.
               </span>
             </dd>
             <img
-              src="image/loud.png"
-              width="75"
-              height="80"
+              src="image/pawn-figure-fell.webp"
+              width="110"
+              height="50"
               loading="lazy"
-              alt="гучно"
+              alt="пішак"
             />
           </div>
         </dl>
@@ -452,7 +459,7 @@
               Ви можете купити шахи:
               <h6>львів</h6>
               ,
-              <h6>івано франківськ</h6>
+              <h6>вінниця</h6>
               ,
               <h6>київ</h6>
               та в інших містах
@@ -505,6 +512,39 @@
             alt="вибрати"
           />
           <p>ми тебе не змушуємо, бо ти сам цього хочеш (:</p>
+        </div>
+      </section>
+      <section id="outreach">
+        <h2 class="outreach__title">ТАКОЖ КУПУЮТЬ</h2>
+        <div class="outreach__list">
+          <a
+            href="https://monopolytut.com/harry-potter"
+            rel="dofollow"
+            class="outreach__item"
+          >
+            <img
+              src="image/monopolytut_com.webp"
+              width="164"
+              height="200"
+              loading="lazy"
+              alt="монополія"
+            />
+            <span class="outreach__name">МОНОПОЛІЯ</span>
+          </a>
+          <a
+            href="https://elkatut.com/180sm"
+            rel="dofollow"
+            class="outreach__item"
+          >
+            <img
+              src="image/elkatut_com.webp"
+              width="140"
+              height="200"
+              loading="lazy"
+              alt="ялинка штучна"
+            />
+            <span class="outreach__name">ЯЛИНКА ШТУЧНА</span>
+          </a>
         </div>
       </section>
     </main>
